2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix display of connector property error, resolves #122

2020-05-01 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Do not log the execution time limit change (logger not available), resolves #119
	* Fix syntax error in documentation code sample, resolves #118
	* Release version 4.2.3

2020-04-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Make add task button visible again independently of task groups, resolves #117
	* Update documentation settings
	* Release version 4.2.2

2020-03-11 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix duplication of information in StoreDataStep, resolves #113
	* Release version 4.2.1

2020-03-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow usage of XPath for selecting reference nodes, resolves #109
	* Introduce extra data storage in Data object, resolves #112
	* Release version 4.2.0

2020-02-03 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add simple mechanism for passing Importer instance to user functions, resolves #105

2020-02-01 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add test for mapping behavior (default value and multiple value separator), resolves #106

2019-07-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add support for automating slug fields update, resolves #94

2019-07-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Drop compatibility with TYPO3 v8, resolves #79

2019-06-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Sanitize usage of uidRepository, resolves #101
	* Add note about MM and multipleValuesSeparator properties not working together, resolves #98
	* Release version 4.1.3

2019-05-03 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix handling of configuration key when index is 0
	* Display sync information for individual configuration when synchronization for group is active, resolves #91

2019-03-13 Francois Suter (Idéative)  <typo3@ideative.ch>
